--- a/style.css
+++ b/style.css
@@ -1,3 +1,136 @@
-body{
-    background-color: #f3e5d8;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  font-family: outfit;
+  height: 100vh;
+  width: 100vw;
+  background-color: #f3e5d8;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card {
+  background-color: #ffffff;
+  width: 700px;
+  margin-top: 50em;
+  padding: 30px;
+  border-radius: 10px;
+}
+
+img {
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+h1 {
+  font-family: young;
+  font-weight: 550;
+  color: #353332;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 12px;
+  color: grey;
+  margin-bottom: 20px;
+}
+
+.time {
+  background-color: #fff7fc;
+  padding: 20px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.time h4 {
+  color: #883151;
+  margin-bottom: 10px;
+}
+
+.time ul {
+  color: grey;
+  list-style: none;
+}
+
+.time li::before {
+  color: #883151;
+  content: "•";
+  font-size: 20px;
+  margin-right: 20px;
+}
+
+h2 {
+  font-family: young;
+  color: #914e30;
+  font-weight: 100;
+  margin-bottom: 10px;
+}
+
+.ingredients ul {
+  color: grey;
+  list-style: none;
+  margin-left: 5px;
+}
+
+.ingredients li::before {
+  color: #914e30;
+  content: "•";
+  font-size: 20px;
+  margin-right: 20px;
+}
+
+hr {
+  width: 100%;
+  margin-block: 30px;
+  background-color: rgb(223, 223, 223);
+  border: none;
+  height: 1px;
+}
+
+.instructions ol {
+  color: #914e30;
+  font-weight: bold;
+  margin-left: 25px;
+}
+
+.instructions p {
+  font-size: 17px;
+  color: grey;
+  margin-bottom: 20px;
+  font-weight: normal;
+  margin-left: 20px;
+}
+
+.nut p {
+  font-size: 16px;
+}
+
+table {
+  width: 100%;
+  color: grey;
+}
+
+.name {
+  padding-left: 30px;
+}
+
+.value {
+  color: #914e30;
+  font-weight: bold;
+  padding-left: 250px;
+}
+
+table hr {
+  margin-block: 10px;
 }
